--- a/package.json
+++ b/package.json
@@ -1,8 +1,14 @@
 {
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "hbs": "^4.2.0",
+    "http-proxy": "^1.18.1",
+    "http-proxy-middleware": "^2.0.6",
     "passport": "^0.6.0",
-    "pg": "^8.8.0"
+    "passport-local": "^1.0.0",
+    "pg": "^8.8.0",
+    "sequelize": "^6.25.3"
   }
 }
