--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "express-ws": "^5.0.2",
     "hbs": "^4.2.0",
     "http-proxy": "^1.18.1",
     "http-proxy-middleware": "^2.0.6",
